--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.6.9",
     "formik": "^2.2.9",
